MIDI import operation: dots instead of ties
Former-commit-id: 2d44fbca67b8ce77136e547aa9f4363128f70550

--- a/mtest/CMakeLists.txt
+++ b/mtest/CMakeLists.txt
@@ -37,6 +37,7 @@ add_library(
       ${PROJECT_SOURCE_DIR}/mscore/capxml.cpp
       ${PROJECT_SOURCE_DIR}/mscore/exportxml.cpp
       ${PROJECT_SOURCE_DIR}/mscore/importmidi.cpp
+      ${PROJECT_SOURCE_DIR}/mscore/importmidi_operations.cpp
       ${PROJECT_SOURCE_DIR}/mscore/exportmidi.cpp
       ${PROJECT_SOURCE_DIR}/mscore/importxml.cpp
       ${PROJECT_SOURCE_DIR}/mscore/importxmlfirstpass.cpp
