fix travis build
Former-commit-id: 70ccfdf9f755245143245ac380b7e54de8752673

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,13 @@ before_install:
   - "sudo apt-get -q update"
   - "sudo apt-get install -y g++-4.7"
   - "sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.7 40 --slave /usr/bin/g++ g++ /usr/bin/g++-4.7"
-  - "sudo apt-get install -y libqt4-dev"
   - "sudo apt-get install -y alsa libsndfile1 wget make ant curl cmake"
   - "sudo apt-get install -y libasound2-dev portaudio19-dev libsndfile1-dev zlib1g-dev libfreetype6-dev libfontconfig-dev"
   - "sudo apt-get install -y lame libmp3lame-dev"
+  - "mkdir qt5"
+  - "wget --no-check-certificate -O qt5.zip https://qt5-build-linux64.googlecode.com/files/qt502.zip"
+  - "unzip qt5.zip -d qt5"
+  - "export PATH=`pwd`/qt5/bin:$PATH"
 before_script: 
   - "make revision"
   - "make debug CPUS=16"
