fixes for regression tests
Former-commit-id: bce1b99646e6f87f0209c7fe03586c5899c39eae

--- a/mtest/CMakeLists.txt
+++ b/mtest/CMakeLists.txt
@@ -11,7 +11,7 @@
 #  the file LICENSE.GPL
 #=============================================================================
 
-set(CMAKE_VERBOSE_MAKEFILE ON)
+# set(CMAKE_VERBOSE_MAKEFILE ON)
 enable_testing()
 
 include_directories(
