--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -99,6 +99,7 @@ QT4_WRAP_CPP (mocs
       paletteBoxButton.h pathlistdialog.h exampleview.h noteGroups.h inspectorTextLine.h
       importmidi_panel.h importmidi_operations.h
       importmidi_opmodel.h importmidi_trmodel.h importmidi_opdelegate.h
+      importmidi_meter.h
       ${OMR_MOCS}
       ${SCRIPT_MOCS}
       )
@@ -208,6 +209,7 @@ add_executable ( ${ExecutableName}
       pathlistdialog.cpp exampleview.cpp inspectorTextLine.cpp
       importmidi_panel.cpp importmidi_operations.cpp miconengine.cpp
       importmidi_opmodel.cpp importmidi_trmodel.cpp importmidi_opdelegate.cpp
+      importmidi_meter.cpp
 
       ${OMR_FILES}
       ${AUDIO}
