Row for all tracks selection in GUI panel
Former-commit-id: 4f3930b012ee33ab1f3db0477d50844c7190b74a

--- a/mtest/CMakeLists.txt
+++ b/mtest/CMakeLists.txt
@@ -38,6 +38,7 @@ add_library(
       ${PROJECT_SOURCE_DIR}/mscore/exportxml.cpp
       ${PROJECT_SOURCE_DIR}/mscore/importmidi.cpp
       ${PROJECT_SOURCE_DIR}/mscore/importmidi_operations.cpp
+      ${PROJECT_SOURCE_DIR}/mscore/importmidi_meter.cpp
       ${PROJECT_SOURCE_DIR}/mscore/exportmidi.cpp
       ${PROJECT_SOURCE_DIR}/mscore/importxml.cpp
       ${PROJECT_SOURCE_DIR}/mscore/importxmlfirstpass.cpp
