add c++ wrapper for sndfile, replace ogg routines in fluid with sndfile
Former-commit-id: 9559b2ce5894031df9d2049e707d3b2434a13b1c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -286,7 +286,7 @@ if (APPLE)
       endif (SNDFILE_INCDIR)
    endif(HAS_AUDIOFILE)
 else(APPLE)
-   if(MINGW)  
+   if(MINGW)
       set(SNDFILE_LIB sndfile-1)
    else(MINGW)
       set(SNDFILE_LIB sndfile)
@@ -355,7 +355,7 @@ ADD_CUSTOM_TARGET(mops2 DEPENDS ${PCH})
 ## add subdirs
 ##
 subdirs(
-      mscore  awl bww2mxml share midi fluid mstyle libmscore synthesizer
+      mscore  awl bww2mxml share midi audiofile fluid mstyle libmscore synthesizer
       effects thirdparty/rtf2html thirdparty/diff
       )
 
