Raw code for tuplets
Former-commit-id: 7a7e98ccec452f39be463ff688acb6c02aecd46f

--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -151,6 +151,7 @@ QT4_WRAP_CPP (mocs
       importmidi_panel.h importmidi_operations.h 
       importmidi_opmodel.h importmidi_trmodel.h importmidi_opdelegate.h
       importmidi_meter.h importmidi_operation.h importmidi_quant.h importmidi_chord.h
+      importmidi_tupletdata.h
       debugger/debugger.h
       ${OMR_MOCS}
       ${SCRIPT_MOCS}
