refactoring grace notes
Former-commit-id: ab6120f85e0050e2b9a6e8f3784cd5d00003e1fa

--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -230,7 +230,8 @@ add_executable ( ${ExecutableName}
       mixer.cpp playpanel.cpp preferences.cpp measureproperties.cpp
       seq.cpp boxproperties.cpp textpalette.cpp
       timedialog.cpp symboldialog.cpp shortcutcapturedialog.cpp
-      simplebutton.cpp musedata.cpp exportly.cpp
+      simplebutton.cpp musedata.cpp
+      # exportly.cpp
       editdrumset.cpp editstaff.cpp voltaproperties.cpp
       timesigproperties.cpp newwizard.cpp transposedialog.cpp
       chordedit.cpp excerptsdialog.cpp metaedit.cpp magbox.cpp
