reaktivate measure regression test
Former-commit-id: cffefa36a97f430ca8ceb1fd6bb1f918ebb2aa74

--- a/mtest/libmscore/CMakeLists.txt
+++ b/mtest/libmscore/CMakeLists.txt
@@ -17,7 +17,7 @@
 #      repeat concertpitch keysig clef
 #      )
 subdirs(
-      hairpin note compat beam split join splitstaff
+      hairpin note compat measure beam split join splitstaff
       timesig element midi dynamic plugins copypaste tuplet
       repeat concertpitch keysig clef
       )
