fix regression for grace notes
Former-commit-id: 783168fd18590500d2cf3d0eeb1bd1ee62f45b92

--- a/mtest/libmscore/CMakeLists.txt
+++ b/mtest/libmscore/CMakeLists.txt
@@ -18,12 +18,11 @@
 #      )
 subdirs(
       hairpin note compat measure beam split join splitstaff
-      timesig element midi dynamic plugins copypaste tuplet
+      timesig layout element midi dynamic plugins copypaste tuplet
       repeat concertpitch keysig clef
       )
 
 # midi - does not work
 # link
 # layout
-#measure
 
