replace OTF font by TTF font, fix PDF size issue #21567
Former-commit-id: 762ef8544f29b8b8fbb14ecaba749d48d9fb4180

--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -454,8 +454,8 @@ endif (MINGW)
 
 if (APPLE)
      install (FILES
-      ../fonts/gonville-20.otf
-      ../fonts/mscore-20.otf
+      ../fonts/gonville-20.ttf
+      ../fonts/mscore-20.ttf
       ../fonts/MuseJazz.ttf
       ../fonts/FreeSerifMscore.ttf
       ../fonts/FreeSans.ttf
