Put midi tuplet code to a separate file
Former-commit-id: 9bee4319e38e470eccb96b6cd41308ae63dd6f9f

--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -151,7 +151,7 @@ QT4_WRAP_CPP (mocs
       importmidi_panel.h importmidi_operations.h 
       importmidi_opmodel.h importmidi_trmodel.h importmidi_opdelegate.h
       importmidi_meter.h importmidi_operation.h importmidi_quant.h importmidi_chord.h
-      importmidi_tupletdata.h
+      importmidi_tuplet.h
       debugger/debugger.h
       ${OMR_MOCS}
       ${SCRIPT_MOCS}
@@ -265,7 +265,7 @@ add_executable ( ${ExecutableName}
       pathlistdialog.cpp exampleview.cpp inspector/inspectorTextLine.cpp
       importmidi_panel.cpp importmidi_operations.cpp miconengine.cpp
       importmidi_opmodel.cpp importmidi_trmodel.cpp importmidi_opdelegate.cpp
-      importmidi_meter.cpp importmidi_quant.cpp
+      importmidi_meter.cpp importmidi_quant.cpp importmidi_tuplet.cpp importmidi_chord.cpp
 
       ${OMR_FILES}
       ${AUDIO}
