remove EditTempo dialog
Former-commit-id: 3eee790ac4a0220f41476514f383df9bd915bec7

--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -36,7 +36,7 @@ if (SCRIPT_INTERFACE)
 endif (SCRIPT_INTERFACE)
 
 QT4_WRAP_UI (ui_headers
-      insertmeasuresdialog.ui editinstrument.ui editstyle.ui edittempo.ui  instrdialog.ui
+      insertmeasuresdialog.ui editinstrument.ui editstyle.ui instrdialog.ui
       measuresdialog.ui pagesettings.ui mixer.ui playpanel.ui prefsdialog.ui measureproperties.ui
       textpalette.ui  timedialog.ui symboldialog.ui  shortcutcapturedialog.ui  editdrumset.ui
       editstaff.ui voltaproperties.ui timesigproperties.ui boxproperties.ui
@@ -122,7 +122,7 @@ endif (OMR)
 
 
 QT4_WRAP_CPP (mocs
-      scoreview.h editinstrument.h editstyle.h edittempo.h instrdialog.h
+      scoreview.h editinstrument.h editstyle.h instrdialog.h
       musescore.h navigator.h pagesettings.h palette.h mixer.h playpanel.h
       measureproperties.h seq.h textpalette.h textstyle.h
       timedialog.h symboldialog.h shortcutcapturedialog.h simplebutton.h
@@ -222,10 +222,8 @@ add_executable ( ${ExecutableName}
       ${INCS}
 
       actions.cpp scoreview.cpp editinstrument.cpp editstyle.cpp
-      edittempo.cpp icons.cpp importbww.cpp
-      instrdialog.cpp
-      debugger/debugger.cpp
-      menus.cpp importmidi.cpp
+      icons.cpp importbww.cpp instrdialog.cpp
+      debugger/debugger.cpp menus.cpp importmidi.cpp
       musescore.cpp navigator.cpp pagesettings.cpp palette.cpp
       mixer.cpp playpanel.cpp preferences.cpp measureproperties.cpp
       seq.cpp boxproperties.cpp textpalette.cpp
