--- a/mtest/libmscore/CMakeLists.txt
+++ b/mtest/libmscore/CMakeLists.txt
@@ -18,10 +18,11 @@
 #      )
 subdirs(
       hairpin note compat link measure beam split join splitstaff
-      timesig layout element midi dynamic plugins copypaste tuplet
+      timesig layout element midi dynamic copypaste tuplet
       repeat concertpitch keysig clef
       )
 
+# plugins deferred
 # midi - does not work
 # link
 # layout
