--- a/effects/CMakeLists.txt
+++ b/effects/CMakeLists.txt
@@ -20,14 +20,15 @@ endif (APPLE)
 
 QT4_ADD_RESOURCES (qrc_effects_files
       zita1/zita.qrc
+#      freeverb/freeverb.qrc
+      noeffect/noeffect.qrc
       )
 
 QT4_WRAP_CPP(effectMocs
       effectgui.h
+#      freeverb/freeverb.h
       zita1/zita.h
-      zita1/zitagui.h
       noeffect/noeffect.h
-      noeffect/noeffectgui.h
       effect.h
       )
 
@@ -39,7 +40,8 @@ add_library (effects STATIC
       effect.cpp
       effectgui.cpp
       noeffect/noeffect.cpp
-      noeffect/noeffectgui.cpp
+#      freeverb/freeverb.cpp
+#      freeverb/freeverbgui.cpp
       zita1/zita.cpp
       zita1/zitagui.cpp
       ${INCS}
