enable mtest plugins
Former-commit-id: 2abfd73485cb37b8ef1427e6aea9277efcefb2b8

--- a/mtest/libmscore/CMakeLists.txt
+++ b/mtest/libmscore/CMakeLists.txt
@@ -11,19 +11,10 @@
 #  the file LICENSE.GPL
 #=============================================================================
 
-#subdirs(
-#      hairpin note compat link measure beam split join splitstaff
-#      timesig layout element midi dynamic plugins copypaste tuplet
-#      repeat concertpitch keysig clef
-#      )
 subdirs(
       hairpin note compat link measure beam split join splitstaff
-      timesig layout element midi dynamic copypaste tuplet
+      timesig layout element midi dynamic plugins copypaste tuplet
       repeat concertpitch keysig clef
       )
 
-# plugins deferred
-# midi - does not work
-# link
-# layout
 
