add missing libgcc_s_dw2-1.dll in install step for windows
Former-commit-id: 70553e8de7b2948320eb1ca9b1b6d977cad008ca

--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -362,6 +362,7 @@ if (MINGW)
 
 
    install_files ( /bin .dll
+      ${CROSS}/bin/libgcc_s_dw2-1.dll
       ${CROSS}/bin/libstdc++-6.dll
       ${CROSS}/bin/libwinpthread-1.dll
       ${CROSS}/lib/portaudio.dll
