do not install debug dll of qt quick modules on windows
Former-commit-id: 2c001c22fc18a10373bd980ffb2fc15bb3d43ff7

--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -415,7 +415,8 @@ if (MINGW)
       REGEX ".*QtTest.*" EXCLUDE
       REGEX ".*QtSensors.*" EXCLUDE
       REGEX ".*QtGraphicalEffects.*" EXCLUDE
-      REGEX ".*QtMultimedia.*" EXCLUDE)
+      REGEX ".*QtMultimedia.*" EXCLUDE
+      REGEX ".*d\\.dll" EXCLUDE)
 
 else (MINGW)
    target_link_libraries(mscore
