fix #21863: Print command causes crash
Former-commit-id: 88e4ac8d6e94df57c879049890edbeaa4a58c695

--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -408,6 +408,10 @@ if (MINGW)
       ${CROSSQT}/plugins/platforms/qwindows.dll
       DESTINATION bin/platforms)
 
+    install(FILES
+      ${CROSSQT}/plugins/printsupport/windowsprintersupport.dll
+      DESTINATION bin/printsupport)
+
     install(DIRECTORY
       ${CROSSQT}/qml
       DESTINATION .
