remove QObject from zerberus
Former-commit-id: 4c9efd84ebb9fc0449fb5b9ce2be410b294c57f2

--- a/zerberus/CMakeLists.txt
+++ b/zerberus/CMakeLists.txt
@@ -12,7 +12,7 @@
 
 include (${PROJECT_SOURCE_DIR}/build/gch.cmake)
 
-QT4_WRAP_CPP(zerberusMocs zerberusgui.h instrument.h zerberus.h)
+QT4_WRAP_CPP(zerberusMocs zerberusgui.h)
 QT4_WRAP_UI (zerberusUi zerberus_gui.ui)
 
 add_library (zerberus STATIC
