fix #22018: Filename as black text on dark grey difficult to read
Former-commit-id: 60487734af047fe2e6c27c7af909938d6e62b942

--- a/mtest/CMakeLists.txt
+++ b/mtest/CMakeLists.txt
@@ -42,6 +42,7 @@ add_library(
       ${PROJECT_SOURCE_DIR}/mscore/importmidi_quant.cpp
       ${PROJECT_SOURCE_DIR}/mscore/importmidi_tuplet.cpp
       ${PROJECT_SOURCE_DIR}/mscore/importmidi_chord.cpp
+      ${PROJECT_SOURCE_DIR}/mscore/importmidi_data.cpp
       ${PROJECT_SOURCE_DIR}/mscore/exportmidi.cpp
       ${PROJECT_SOURCE_DIR}/mscore/importxml.cpp
       ${PROJECT_SOURCE_DIR}/mscore/importxmlfirstpass.cpp
