--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - "sudo apt-get install -y libasound2-dev portaudio19-dev libsndfile1-dev zlib1g-dev libfreetype6-dev libfontconfig-dev"
   - "sudo apt-get install -y lame libmp3lame-dev"
   - "mkdir qt5"
-  - "wget -q --no-check-certificate -O qt5.zip https://qt5-build-linux64.googlecode.com/files/qt510.zip"
+  - "wget -q -O qt5.zip http://ftp.osuosl.org/pub/musescore/linux/qt/qt510.zip"
   - "unzip -qq qt5.zip -d qt5"
   - "export PATH=`pwd`/qt5/bin:$PATH"
   - "export QT_PLUGIN_PATH=`pwd`/qt5/plugins"
