Swing option for MIDI import
Former-commit-id: 3fa683a0f1b509e53736270f52785977ff4f43fc

--- a/mtest/CMakeLists.txt
+++ b/mtest/CMakeLists.txt
@@ -44,6 +44,7 @@ add_library(
       ${PROJECT_SOURCE_DIR}/mscore/importmidi_tuplet.cpp
       ${PROJECT_SOURCE_DIR}/mscore/importmidi_chord.cpp
       ${PROJECT_SOURCE_DIR}/mscore/importmidi_data.cpp
+      ${PROJECT_SOURCE_DIR}/mscore/importmidi_swing.cpp
       ${PROJECT_SOURCE_DIR}/mscore/exportmidi.cpp
       ${PROJECT_SOURCE_DIR}/mscore/importxml.cpp
       ${PROJECT_SOURCE_DIR}/mscore/importxmlfirstpass.cpp
