fix #22048. Thanks to ABL!
Former-commit-id: b030a325a9f3e1d1c03f380eebc52587dbe55f2f

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,8 +104,9 @@ if (APPLE)
    set(CMAKE_CXX_FLAGS_RELEASE "-std=c++0x -fPIC -stdlib=libc++ -O2 -DNDEBUG")
 else (APPLE)
    if (MINGW)
-      set(CMAKE_CXX_FLAGS_DEBUG   "-std=gnu++0x -g")
-      set(CMAKE_CXX_FLAGS_RELEASE "-std=gnu++0x -O2 -DNDEBUG")
+      # -mno-ms-bitfields see #22048
+      set(CMAKE_CXX_FLAGS_DEBUG   "-std=gnu++0x -mno-ms-bitfields -g")
+      set(CMAKE_CXX_FLAGS_RELEASE "-std=gnu++0x -mno-ms-bitfields -O2 -DNDEBUG")
    else (MINGW)
       set(CMAKE_CXX_FLAGS_DEBUG   "-std=gnu++0x -fPIC -fPIE -g")
       set(CMAKE_CXX_FLAGS_RELEASE "-std=gnu++0x -fPIC -O2 -DNDEBUG")
