--- a/mtest/CMakeLists.txt
+++ b/mtest/CMakeLists.txt
@@ -46,6 +46,7 @@ add_library(
       ${PROJECT_SOURCE_DIR}/mscore/importmidi_data.cpp
       ${PROJECT_SOURCE_DIR}/mscore/importmidi_fraction.cpp
       ${PROJECT_SOURCE_DIR}/mscore/importmidi_swing.cpp
+      ${PROJECT_SOURCE_DIR}/mscore/importmidi_drum.cpp
       ${PROJECT_SOURCE_DIR}/mscore/exportmidi.cpp
       ${PROJECT_SOURCE_DIR}/mscore/importxml.cpp
       ${PROJECT_SOURCE_DIR}/mscore/importxmlfirstpass.cpp
