Tests for clef changes
Former-commit-id: 27cc1e685a384150bffecbf1d6c16625509aeb7d

--- a/mtest/CMakeLists.txt
+++ b/mtest/CMakeLists.txt
@@ -47,6 +47,7 @@ add_library(
       ${PROJECT_SOURCE_DIR}/mscore/importmidi_fraction.cpp
       ${PROJECT_SOURCE_DIR}/mscore/importmidi_swing.cpp
       ${PROJECT_SOURCE_DIR}/mscore/importmidi_drum.cpp
+      ${PROJECT_SOURCE_DIR}/mscore/importmidi_clef.cpp
       ${PROJECT_SOURCE_DIR}/mscore/exportmidi.cpp
       ${PROJECT_SOURCE_DIR}/mscore/importxml.cpp
       ${PROJECT_SOURCE_DIR}/mscore/importxmlfirstpass.cpp
