add missing dll on windows
Former-commit-id: 1e72e177b55980120aa19bea99cf476001810905

--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -393,6 +393,8 @@ if (MINGW)
       ${CROSSQT}/bin/Qt5PrintSupport.dll
       ${CROSSQT}/bin/Qt5OpenGL.dll
       ${CROSSQT}/bin/Qt5Sensors.dll
+      ${CROSSQT}/bin/Qt5Multimedia.dll
+      ${CROSSQT}/bin/Qt5MultimediaWidgets.dll
       ${CROSSQT}/bin/icuin51.dll
       ${CROSSQT}/bin/icuuc51.dll
       ${CROSSQT}/bin/icudt51.dll
