small build fix
Former-commit-id: 2e07a8b206bc5f4c63e742af84af9f11062c1b14

--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -152,7 +152,7 @@ QT4_WRAP_CPP (mocs
       importmidi_panel.h importmidi_operations.h
       importmidi_opmodel.h importmidi_trmodel.h importmidi_opdelegate.h
       importmidi_operation.h importmidi_quant.h importmidi_chord.h
-      importmidi_tuplet.h importmidi_inner.h importmidi_data.h importmidi_swing.h
+      importmidi_inner.h importmidi_data.h importmidi_swing.h
       debugger/debugger.h importmidi_fraction.h importmidi_drum.h
       importmidi_lrhand.h importmidi_lyrics.h importmidi_trview.h
       ${OMR_MOCS}
